# feast-mssql

./: .gitignore  README.md  checklist.md  conda.dev.yaml  docker-compose.yaml  environment.dev.yml  environment.mssql-cli.yml  environment.yml  lets.yaml  pyproject.toml  setup.cfg
docker/: Dockerfile-2017  docker-compose.yml  setup.attach.sql  setup.restore.sql
feast_mssql/: __init__.py  bootstrap.py  connection_utils.py  mssql_config.py  type_map.py
feast_mssql/offline_stores/: mssql.py  mssql_source.py
feast_mssql/offline_stores/tests/: data_source.py
feast_mssql/templates/mssql/: bootstrap.py  driver_repo.py  feature_store.yaml
repo_local/: example.py  feature_store.yaml
witty_lioness/: feature_store.yaml
witty_lioness/data/: driver_stats.parquet
