[metadata]
name = feast_mssql
version = 0.0.1
author = Bernardo Galvão
author_email = brnrd.glv+dev@gmail.com
description = MSSQL plugin for Feast, currently only offline store.
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgalvao/feast-mssql
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
